fix server output

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-cmd/p2pssh/p2pssh
 .vscode/launch.json
 p2pssh
+!cmd/p2pssh
 version/version.go
